# minesweeper

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: base.h  main.cpp  state_accessor.hpp
src/logic/: singleton.hpp  state_accessor.hpp
src/view/: game.h  scoreboard.h  setting.h
ui/: entry.slint  main.slint
ui/logic/: view_manager.slint
ui/view/: game.slint  main.slint  scoreboard.slint  setting.slint
ui/widget/: board.slint  digit.slint  empty.slint  face_button.slint  grid.slint  isolator.slint  number_display.slint  view.slint
